[package]
name = "lab_3"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
getset = "0.1.3"
derive_more = { version = "1.0.0", features = ["deref", "from"] }
thiserror = "1.0.60"
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }
num-prime = "0.4.4"
num-traits = "0.2.19"
